--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-     <!-- Meta Tags for SEO -->
-     <meta name="description" content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
-     <meta name="keywords" content="thisisdineth.store, dineth Dilshan, dineth dilshan gunawardana, who is dineth dilshan, who is dineth dilshan gunawardana">
-     <meta name="author" content="Dineth Dilshan Gunawardana">
- 
-     <!-- Open Graph Meta Tags for Social Media Sharing -->
-     <meta property="og:title" content="Dineth Dilshan Gunawardana">
-     <meta property="og:description" content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
-     <meta property="og:image" content="pp.png">
-     <meta property="og:url" content="https://www.dinethgunawardana.com">
-     <meta property="og:type" content="website">
- 
-     <!-- Twitter Card Meta Tags -->
-     <meta name="twitter:card" content="Dineth Dilshan Gunawardana">
-     <meta name="twitter:title" content="Dineth Dilshan Gunawardana">
-     <meta name="twitter:description" content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
-     <meta name="twitter:image" content="pp.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
+    <link rel="manifest" href="fav/site.webmanifest">
+    <!-- Meta Tags for SEO -->
+    <meta name="description"
+        content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
+    <meta name="keywords"
+        content="thisisdineth.store, dineth Dilshan, dineth dilshan gunawardana, who is dineth dilshan, who is dineth dilshan gunawardana">
+    <meta name="author" content="Dineth Dilshan Gunawardana">
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="Dineth Dilshan Gunawardana">
+    <meta property="og:description"
+        content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
+    <meta property="og:image" content="pp.png">
+    <meta property="og:url" content="https://www.dinethgunawardana.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="Dineth Dilshan Gunawardana">
+    <meta name="twitter:title" content="Dineth Dilshan Gunawardana">
+    <meta name="twitter:description"
+        content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
+    <meta name="twitter:image" content="pp.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dineth Dilshan Gunawardana</title>
@@ -63,80 +72,104 @@
     <section class="about">
         <div class="container">
             <h2 class="section-title">Real Dineth</h2>
-            <p class="bio">I’m Dineth Dilshan Gunawardana, so I was born 2007 march 20 ,This is my personal website and I created this myself. And I love photography , Coding  You can see my projects and all other updates here If like to see my photos you must follow me on Instagram @thisisdineth</p>
+            <p class="bio">I’m Dineth Dilshan Gunawardana, so I was born 2007 march 20 ,This is my personal website and
+                I created this myself. And I love photography , Coding You can see my projects and all other updates
+                here If like to see my photos you must follow me on Instagram @thisisdineth</p>
             <img src="profile.png" alt="Profile" class="profile-img">
         </div>
     </section>
 
- <!-- Gallery Section -->
- <section class="gallery">
-    <h2 class="section-title">From my Instagram</h2>
-    <div class="gallery-container">
-        <iframe src="https://www.instagram.com/p/C-AqvqeB-uZ/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C9wA9LNJJHI/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C9xSS7vhBLk/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C8nzDI9hURM/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C9ujv7PB70o/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C9Or9m3J-Fk/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.instagram.com/p/C1FFpTep1yg/embed" class="gallery-item" frameborder="0" allowfullscreen></iframe>
-    </div>
-</section>
-
-   <!-- LinkedIn Section -->
-   <section class="linkedin">
-    <h2 class="section-title">Connect with me on LinkedIn</h2>
-    <div class="linkedin-container">
-        <!-- Embed LinkedIn Badge -->
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="thisisdineth" data-version="v1">
-            <a class="badge-base__link LI-simple-link" href="https://lk.linkedin.com/in/thisisdineth?trk=profile-badge"></a>
+    <!-- Gallery Section -->
+    <section class="gallery">
+        <h2 class="section-title">From my Instagram</h2>
+        <div class="gallery-container">
+            <iframe src="https://www.instagram.com/p/C-AqvqeB-uZ/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C9wA9LNJJHI/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C9xSS7vhBLk/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C8nzDI9hURM/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C9ujv7PB70o/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C9Or9m3J-Fk/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
+            <iframe src="https://www.instagram.com/p/C1FFpTep1yg/embed" class="gallery-item" frameborder="0"
+                allowfullscreen></iframe>
         </div>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-    </div>
-</section>
+    </section>
+
+    <!-- LinkedIn Section -->
+    <section class="linkedin">
+        <h2 class="section-title">Connect with me on LinkedIn</h2>
+        <div class="linkedin-container">
+            <!-- Embed LinkedIn Badge -->
+            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light"
+                data-type="HORIZONTAL" data-vanity="thisisdineth" data-version="v1">
+                <a class="badge-base__link LI-simple-link"
+                    href="https://lk.linkedin.com/in/thisisdineth?trk=profile-badge"></a>
+            </div>
+            <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+        </div>
+    </section>
 
     <!-- LinkedIn Embedded Posts Section -->
     <section class="linkedin-gallery">
         <h2 class="section-title">LinkedIn Posts</h2>
         <div class="linkedin-container">
             <!-- LinkedIn Embedded Posts with increased height -->
-            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7242153564796567553" class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
-            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7241852574335696897" class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
-            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7241849239952113664" class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7242153564796567553"
+                class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7241852574335696897"
+                class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7241849239952113664"
+                class="linkedin-item" frameborder="0" allowfullscreen="" title="Embedded post" height="800"></iframe>
         </div>
     </section>
-    
+
     <!-- Timeline Section -->
     <section class="timeline">
         <h2 class="section-title">My Personal career</h2>
         <div class="timeline-container">
             <div class="timeline-item">
                 <h3>2013-2017</h3>
-                <p>I began my school journey in 2013 at Kalutara Vidyalaya, Kalutara. After passing the grade 5 scholarship exam in 2007, I transitioned to a new school to continue my education.</p>
+                <p>I began my school journey in 2013 at Kalutara Vidyalaya, Kalutara. After passing the grade 5
+                    scholarship exam in 2007, I transitioned to a new school to continue my education.</p>
             </div>
             <div class="timeline-item">
                 <h3>2017-2019</h3>
-                <p>Upon being selected for Mahanama College, a new chapter in my life began, marking the start of an exciting new era. </p>
+                <p>Upon being selected for Mahanama College, a new chapter in my life began, marking the start of an
+                    exciting new era. </p>
             </div>
             <div class="timeline-item">
                 <h3>2019 - 2021</h3>
-                <p>Between 2019 and 2020, my life underwent significant change. Unfortunately, COVID-19 reached Sri Lanka during this time, but it also sparked my growing curiosity about how technology works. I dedicated myself to learning programming languages, and during this period, I also experienced puberty, which shifted my perspective and led me to think in new ways.</p>
+                <p>Between 2019 and 2020, my life underwent significant change. Unfortunately, COVID-19 reached Sri
+                    Lanka during this time, but it also sparked my growing curiosity about how technology works. I
+                    dedicated myself to learning programming languages, and during this period, I also experienced
+                    puberty, which shifted my perspective and led me to think in new ways.</p>
             </div>
         </div>
     </section>
-        <!-- Timeline Section 2 -->
-        <section class="timeline">
-            <div class="timeline-container">
-                <div class="timeline-item">
-                    <h3>2023 - 2024*</h3>
-                    <p>I discovered a golden era in my life during this time. I made new friends, experienced both good and challenging moments, and shared many great memories with my schoolmates. For the first time, I felt the emotion of love, though it didn’t last. I also expanded my knowledge by learning new languages and advancing my technical skills. In addition, I achieved all A passes in my Ordinary Level exams, and I am now pursuing Advanced Level studies in the Mathematics stream.</p>
-                </div>
+    <!-- Timeline Section 2 -->
+    <section class="timeline">
+        <div class="timeline-container">
+            <div class="timeline-item">
+                <h3>2023 - 2024*</h3>
+                <p>I discovered a golden era in my life during this time. I made new friends, experienced both good and
+                    challenging moments, and shared many great memories with my schoolmates. For the first time, I felt
+                    the emotion of love, though it didn’t last. I also expanded my knowledge by learning new languages
+                    and advancing my technical skills. In addition, I achieved all A passes in my Ordinary Level exams,
+                    and I am now pursuing Advanced Level studies in the Mathematics stream.</p>
             </div>
-        </section>
+        </div>
+    </section>
 
 
 
     <script src="./script.js"></script>
-    
+
 
 </body>
+
 </html>
