--- a/projects/interfriends.html
+++ b/projects/interfriends.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
+    <link rel="manifest" href="fav/site.webmanifest">
+    <!-- Meta Tags for SEO -->
+    <meta name="description"
+        content="Official Website of Dineth Dilshan Gunawardana , who is student | Inventor and Photographer.">
+    <meta name="keywords"
+        content="thisisdineth.store, dineth Dilshan, dineth dilshan gunawardana, who is dineth dilshan, who is dineth dilshan gunawardana">
+    <meta name="author" content="Dineth Dilshan Gunawardana">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inter Friends Finder - Project Page</title>
