--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
         <!-- Glass-themed Dock -->
         <div class="dock-container">
             <div class="dock">
-                <a href="#" class="dock-item">
+                <a href="thisisdineth.store" class="dock-item">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
