--- a/projects/interfriends.html
+++ b/projects/interfriends.html
@@ -194,7 +194,7 @@
     <!-- Glass-themed Dock -->
     <div class="dock-container">
         <div class="dock">
-            <a href="index.html" class="dock-item">
+            <a href="thisisdineth.store" class="dock-item">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
