--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <i class="fas fa-envelope"></i>
                 <span>Contact</span>
             </a>
-            <a href="#" class="dock-item">
+            <a href="./downloads/" class="dock-item">
                 <i class="fas fa-cog"></i>
-                <span>Settings</span>
+                <span>Download</span>
             </a>
         </div>
     </div>
